# VLM-Experiments

./: .gitignore  README.md  app.py  detect_cars.ipynb  example_gemini.py  example_moondream.py  gemini_interface.py  moondream_interface.py  pyproject.toml  requirements.txt  setup_guide.md
